fix text flickering in chrome

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -464,6 +464,7 @@ header {
 .pricing {
   text-align: center;
   overflow:auto;
+  -webkit-transform-style: preserve-3d;
 }
 
 .pricing h4 {
